syntax = "proto3";

package auth;

option go_package = ".";

import "google/protobuf/empty.proto";

service AuthService {
  rpc RegisterWithEmailAndPassword(RegisterRequest) returns (RegisterResponse);
  rpc LoginWithEmailAndPassword(LoginRequest) returns (LoginResponse);
  rpc SendEmailVerificationLink(EmailLinkRequest) returns (google.protobuf.Empty);
  rpc SendPasswordResetLink(EmailLinkRequest) returns (google.protobuf.Empty);
  rpc RefreshIDToken(google.protobuf.Empty) returns (RefreshIDTokenReponse);
}

message RegisterRequest {
  string full_name = 1;
  string email = 2;
  string password = 3;
}

message RegisterResponse {
  string message = 1;
}

message LoginRequest {
  string email = 1;
  string password = 2;
}

message LoginResponse {
  string id_token = 1;
  string refresh_token = 2;
}

message EmailLinkRequest {
  string email = 1;
}

message RefreshIDTokenReponse {
  string id_token = 1;
}